Sign up画面を作成
hamlとscssを編集しました。

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,23 +1,21 @@
 .wrapper
   %header
-    %a{:href => "#"}
-      %img.logo{alt: "", src: "https://i.pinimg.com/originals/a5/96/81/a59681532dc173741b66002df92ee9d6.png"}
+    %a{href: "#"}
+      %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
   / /header
   .main
     .main__box
       .main__box--header
-        %h2
+        %h1
           新規会員登録
-      .main__box
-        %ul.main__box--regist
-          %li.main__box--regist__mail メールアドレスで登録
-          %li.main__box--regist__facebook facebookで登録
-          %li.main__box--regist__google googleで登録
-  %footer
-    %ul.terms
-      %li.terms__pribacy
-        %a{:href => "#"} プライバシーポリシー
-      %li.terms__rule
-        %a{:href => "#"} メルカリ利用規約
-      %li.terms__specified
-        %a{:href => ""} 特定商取引に関する表記
+      .main__box--contents
+        .contents__regist
+          %a.contents__regist--mail{href: "#" }
+            %i.far.fa-envelope
+            メールアドレスで登録
+          %button.contents__regist--facebook
+            %i.fab.fa-facebook-square
+            Facebookで登録
+          %button.contents__regist--google
+            Googleで登録
+  = render 'sign_up_footer'
