--- a/app/assets/stylesheets/modules/_sign_up.scss
+++ b/app/assets/stylesheets/modules/_sign_up.scss
@@ -1,4 +1,7 @@
 @import "./reset";
+@import "./mixin/_sign__up--footer";
+
+
 
 *{
   box-sizing: border-box;
@@ -9,7 +12,7 @@ html{
   body{
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     position: relative;
-    .wrapper{
+    .sign__up--wrapper{
       height: 756px;
       background-color: #f5f5f5;
       header{
@@ -125,42 +128,7 @@ html{
           }
         }
       }
-      footer{
-        text-align: center;
-        z-index: 1;
-        position: absolute;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        height: 220px;
-        margin: 0 auto;
-        .terms{
-          width: 100vw;
-          li{
-            display: inline-block;
-            margin-left: 10px;
-            font-size: 12px;
-            margin-top: 40px;
-            a{
-              text-decoration: none;
-              color: black;
-            }
-          }
-        }
-        .footer__logo{
-          height: 65px;
-          width: 80px;
-          margin: 40px auto 0;
-          display: block;
-        }
-        p{
-          margin: 5px auto;
-          width: 456px;
-          small{
-            font-size: 12px;
-          }
-        }
-      }
+      @include sign__up--footer();
     }
   }
 }
