--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-.wrapper
+.sign__up--wrapper
   %header
     %a{href: "#"}
       %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
@@ -10,7 +10,7 @@
           新規会員登録
       .main__box--contents
         .contents__regist
-          %a.contents__regist--mail{href: "#" }
+          %a.contents__regist--mail{href: "/registrations", method: "get" }
             %i.far.fa-envelope
             メールアドレスで登録
           %button.contents__regist--facebook
