mypageのscssをまとめる

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,6 @@
 @import "./reset";
 @import "font-awesome";
-@import "./variable";
-@import "./mypage";
 @import "./mixin";
-@import "./side-bar";
-@import "./profile";
-@import "./app-banner";
-@import "./mudules/header"
+@import "./variable";
+@import "./mypage/*";
+
