--- a/app/views/registrations/index.html.haml
+++ b/app/views/registrations/index.html.haml
@@ -4,18 +4,28 @@
       %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
     .registration__bar
       %ol
-        %li 会員情報
-        %li 電話番号認証
-        %li お届け先住所入力
-        %li 支払い方法
-        %li  完了
+        %li.l--first
+          会員情報
+          .nav__bar.nav__bar--first
+        %li
+          電話番号認証
+          .nav__bar.nav__bar--after
+        %li
+          お届け先住所入力
+          .nav__bar.nav__bar--after
+        %li
+          支払い方法
+          .nav__bar.nav__bar--after
+        %li
+          完了
+          .nav__bar.nav__bar--last
     / /header
   .registration__main
     .registration__main--container
       .container__header
         %h2 会員情報入力
       .container__main
-        %form.container__main--form
+        %form.container__main--form{action: "phones", method: "get"}
           .form__child--first
             %label  ニックネーム
             %span.require  必須
@@ -74,9 +84,9 @@
           %p.container__main--form__text
             ※本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
           .form__child
-            .google__recaptcha{"data-callback": "clearcall", "data-sitekey": "6LceTaQUAAAAAIYn6HPZE7LjlTJDGdBoH_L94J1R"}
+            .g-recaptcha{"data-callback": "clearcall", "data-sitekey": "6LceTaQUAAAAAIYn6HPZE7LjlTJDGdBoH_L94J1R"}
           .form__child
-            %p
+            %p.form__child--next
               「次へ進む」のボタンを押すことにより、
               %a{href: "#"}利用規約
               に同意したものとみなします
@@ -86,6 +96,6 @@
             %p.text__right
               %a{href: "#"}
                 本人情報の登録について
-                %i.fal.fa-angle-right
+                %i.fas.fa-angle-right
 
   = render 'devise/registrations/sign_up_footer'
