--- a/app/assets/stylesheets/mixin/_registration__contain--main.scss
+++ b/app/assets/stylesheets/mixin/_registration__contain--main.scss
@@ -43,6 +43,15 @@
     font-size: 12px;
     vertical-align: top;
   }
+  .not-require{
+    background: gray;
+    margin: 0 0 0 8px;
+    padding: 2px 4px;
+    border-radius: 2px;
+    color: #fff;
+    font-size: 12px;
+    vertical-align: top;
+  }
   input{
     width: 100%;
     margin: 8px 0 0;
@@ -54,6 +63,20 @@
     line-height: 1.5;
     font-size: 16px;
   }
+  .form__child--prefectures{
+    @include grandchild__select;
+    i{
+      right: 300px;
+      position: absolute;
+      top: 45.5%;
+      z-index: 2;
+      color: #888;
+      font-size: 25px;
+      transform: translate(0, -50%);
+      display: inline-block;
+    }
+  }
+
   h3{
     font-size: 16px;
   }
