registration__contain--main修正
クラス名を修正し、カードの有効期限のcssも追加しました

--- a/app/assets/stylesheets/mixin/_registration__contain--main.scss
+++ b/app/assets/stylesheets/mixin/_registration__contain--main.scss
@@ -85,8 +85,8 @@
     margin: 8px 0 0;
   }
   .form__child--grandchild{
-    &__birthday{
-      &__year{
+    &__birthdays{
+      &__birthday{
         display: inline-block;
         width: 76px;
         margin: 8px 0;
@@ -97,22 +97,13 @@
         @include icon;
         @include grandchild__select;
       }
-      &__month{
+    }
+    &__limits{
+      &__limit{
         display: inline-block;
         width: 76px;
         margin: 8px 0;
         position: relative;
-        span{
-          margin: 0 2px;
-        }
-        @include icon;
-        @include grandchild__select;
-      }
-      &__day{
-        display: inline-block;
-        position: relative;
-        width: 76px;
-        margin: 8px 0;
         span{
           margin: 0 2px;
         }
