--- a/app/assets/stylesheets/modules/_payment_confirmation.scss
+++ b/app/assets/stylesheets/modules/_payment_confirmation.scss
@@ -1,6 +1,7 @@
 @import "./mixin/registration__header";
 @import "./mixin/_sign__up--footer";
 @import "./mixin/_registration__contain--main";
+@import "./mixin/next__button";
 
 
 .payment__confirmation{
@@ -74,20 +75,7 @@
                 }
               }
             }
-            button{
-              margin: 40px 0 0;
-              background: #ea352d;
-              border: 1px solid #ea352d;
-              color: #fff;
-              display: block;
-              width: 100%;
-              line-height: 48px;
-              font-size: 14px;
-              transition: all ease-out .3s;
-              cursor: pointer;
-              text-align: center;
-              min-height: 1.5em;
-            }
+            @include next__button();
           }
         }
       }
