--- a/app/assets/stylesheets/modules/_phone.scss
+++ b/app/assets/stylesheets/modules/_phone.scss
@@ -1,5 +1,6 @@
 @import "./mixin/_sign__up--footer";
 @import "./mixin/registration__header";
+@import "./mixin/next__button";
 
 .phone__confirmation{
   height: 880px;
@@ -50,19 +51,7 @@
             color: #333;
             font-size: 13.5px;
           }
-          .phone__button{
-            margin: 40px 0 0;
-            background: #ea352d;
-            border: 1px solid #ea352d;
-            color: #fff;
-            display: block;
-            width: 100%;
-            line-height: 48px;
-            font-size: 14px;
-            transition: all ease-out .3s;
-            cursor: pointer;
-            text-align: center;
-          }
+          @include next__button();
           &--text__right{
             margin: 40px 0 0;
             text-align: right;
