--- a/app/assets/stylesheets/modules/_registration.scss
+++ b/app/assets/stylesheets/modules/_registration.scss
@@ -3,6 +3,7 @@
 @import "./mixin/_registration__contain--main";
 @import "./mixin/_nav__bar_before_after";
 @import "./mixin/_registration__header";
+@import "./mixin/next__button";
 
 .registration__wrapper{
   height: 2104px;
@@ -58,20 +59,7 @@
                 text-decoration: none;
               }
             }
-            button{
-              margin: 40px 0 0;
-              background: #ea352d;
-              border: 1px solid #ea352d;
-              color: #fff;
-              display: block;
-              width: 100%;
-              line-height: 48px;
-              font-size: 14px;
-              transition: all ease-out .3s;
-              cursor: pointer;
-              text-align: center;
-              min-height: 1.5em;
-            }
+            @include next__button();
             .text__right{
               text-align: right;
               padding: 0;
