--- a/app/assets/stylesheets/modules/_sign_up.scss
+++ b/app/assets/stylesheets/modules/_sign_up.scss
@@ -1,5 +1,20 @@
 @import "./reset";
 @import "./mixin/_sign__up--footer";
+@import "./mixin/sns_icon";
+
+@mixin sns_icon(){
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  display: inline-block;
+  speak: none;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+}
 
 
 
@@ -65,20 +80,10 @@ html{
                 line-height: 48px;
                 font-size: 14px;
                 i{
-                  position: absolute;
-                  top: 50%;
-                  left: 16px;
-                  transform: translate(0, -50%);
+                  @include sns_icon();
+
                   color: #ccc;
                   font-size: 20px;
-
-                  display: inline-block;
-                  speak: none;
-                  font-style: normal;
-                  font-weight: 400;
-                  font-variant: normal;
-                  text-transform: none;
-                  line-height: 1;
                 }
               }
               &--facebook{
@@ -91,22 +96,11 @@ html{
                 font-size: 14px;
                 position: relative;
                 i{
-                  position: absolute;
-                  top: 50%;
-                  left: 16px;
-                  transform: translate(0, -50%);
-                  font-size: 30px;
+                  @include sns_icon();
 
                   color: #fff;
                   background: #385185;
-
-                  display: inline-block;
-                  speak: none;
-                  font-style: normal;
-                  font-weight: 400;
-                  font-variant: normal;
-                  text-transform: none;
-                  line-height: 1;
+                  font-size: 30px;
                 }
               }
               &--google{
