ログイン画面、登録完了画面
ログイン画面と登録完了画面を実装しました

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,5 @@
 @import "modules/registration";
 @import "modules/phone";
 @import "modules/payment_confirmation";
+@import "modules/registration_finish";
+@import "modules/login";
