sign__up--scss修正
フッターのscssを修正しました

--- a/app/assets/stylesheets/mixin/_sign__up--footer.scss
+++ b/app/assets/stylesheets/mixin/_sign__up--footer.scss
@@ -8,13 +8,13 @@
     bottom: 0;
     height: 220px;
     margin: 0 auto;
+    padding: 40px 0;
     &__terms{
       width: 100vw;
       li{
         display: inline-block;
         margin-left: 10px;
         font-size: 12px;
-        margin-top: 40px;
         a{
           text-decoration: none;
           color: black;
