--- a/app/views/payment_confirmation/index.html.haml
+++ b/app/views/payment_confirmation/index.html.haml
@@ -1,7 +1,6 @@
 .payment__confirmation
   %header
-    %a{href: "#"}
-      %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
+    = render "./sign/sign_up--header"
     .registration__bar
       %ol
         %li
@@ -66,4 +65,4 @@
           .form__child
             %button{type: "submit"}次へ進む
 
-  = render 'devise/registrations/sign_up_footer'
+  = render "./sign/sign_up_footer"
