--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,6 @@
 .sign__up--wrapper
   %header
-    %a{href: "#"}
-      %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
+    = render "./sign/sign_up--header"
   / /header
   .main
     .main__box
@@ -18,4 +17,4 @@
             Facebookで登録
           %button.contents__regist--google
             Googleで登録
-  = render 'sign_up_footer'
+  = render './sign/sign_up_footer'
