--- a/app/assets/stylesheets/mixin/_registration__contain--main.scss
+++ b/app/assets/stylesheets/mixin/_registration__contain--main.scss
@@ -1,3 +1,6 @@
+@import "./mixin/_color";
+
+
 @mixin grandchild__select(){
   select{
     padding: 0 10px;
@@ -6,7 +9,7 @@
     z-index: 2;
     height: 48px;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 1px solid $border-gray;
     background: 0;
     font-size: 16px;
     line-height: 1.5;
@@ -35,11 +38,11 @@
     display: inline-block;
   }
   .require{
-    background: #ea352d;
+    background: $background-red;
     margin: 0 0 0 8px;
     padding: 2px 4px;
     border-radius: 2px;
-    color: #fff;
+    color: $white;
     font-size: 12px;
     vertical-align: top;
   }
@@ -48,7 +51,7 @@
     margin: 0 0 0 8px;
     padding: 2px 4px;
     border-radius: 2px;
-    color: #fff;
+    color: $white;
     font-size: 12px;
     vertical-align: top;
   }
@@ -58,8 +61,8 @@
     height: 48px;
     padding: 10px 16px 8px;
     border-radius: 4px;
-    border: 1px solid #ccc;
-    background: #fff;
+    border: 1px solid $border-gray;
+    background: $white;
     line-height: 1.5;
     font-size: 16px;
   }
