--- a/app/assets/stylesheets/modules/_adress_cofirmation.scss
+++ b/app/assets/stylesheets/modules/_adress_cofirmation.scss
@@ -3,9 +3,10 @@
 @import "./mixin/_registration__contain--main";
 @import "registration";
 @import "./mixin/next__button";
+@import "./mixin/_color";
 
 .adress__confirmation{
-  background: #f5f5f5;
+  background: $background-all;
   height: 1700px;
   @include registration__header();
   &--main{
@@ -14,7 +15,7 @@
     &--container{
       width: 700px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: $white;
       .container__header{
         h2{
           padding: 32px 16px;
@@ -26,7 +27,7 @@
       }
       .container__main{
         padding: 40px 16px;
-        border-top: 1px solid #f5f5f5;
+        border-top: 1px solid $border-gray;
         .container__main--form{
           max-width: 320px;
           margin: 0 auto;
