--- a/app/assets/stylesheets/modules/_payment_confirmation.scss
+++ b/app/assets/stylesheets/modules/_payment_confirmation.scss
@@ -5,7 +5,7 @@
 
 
 .payment__confirmation{
-  background: #f5f5f5;
+  background: $background-all;
   height: 1100px;
   @include registration__header();
   &--main{
@@ -14,7 +14,7 @@
     &--container{
       width: 700px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: $white;
       .container__header{
         h2{
           padding: 32px 16px;
@@ -26,7 +26,7 @@
       }
       .container__main{
         padding: 40px 16px;
-        border-top: 1px solid #f5f5f5;
+        border-top: 1px solid $background-all;
         .container__main--form{
           max-width: 320px;
           margin: 0 auto;
@@ -58,7 +58,7 @@
               text-align: right;
               padding: 0;
               a{
-                color: #0099e8;
+                color: $text-blue;
                 text-decoration: none;
                 i{
                   display: inline-block;
