--- a/app/assets/stylesheets/modules/_phone.scss
+++ b/app/assets/stylesheets/modules/_phone.scss
@@ -1,10 +1,11 @@
 @import "./mixin/_sign__up--footer";
 @import "./mixin/registration__header";
 @import "./mixin/next__button";
+@import "./mixin/_color";
 
 .phone__confirmation{
   height: 880px;
-  background: #f5f5f5;
+  background: $background-all;
   @include registration__header();
 
   &--main{
@@ -12,17 +13,17 @@
     &__contents{
       width: 700px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: $white;
       h2{
         font-size: 24px;
         padding: 8px 24px;
         font-weight: 600;
-        border-bottom: 1px solid #f5f5f5;
+        border-bottom: 1px solid $background-all;
         text-align: center;
       }
       .form__phone{
         padding: 64px;
-        border-top: 1px solid #f5f5f5;
+        border-top: 1px solid $border-gray;
         .phone__contents{
           max-width: 320px;
           margin: 0 auto;
@@ -39,8 +40,8 @@
               height: 48px;
               padding: 10px 16px 8px;
               border-radius: 4px;
-              border: 1px solid #ccc;
-              background: #fff;
+              border: 1px solid $border-gray;
+              background: $white;
               line-height: 1.5;
               font-size: 16px;
             }
@@ -56,7 +57,7 @@
             margin: 40px 0 0;
             text-align: right;
             a{
-              color: #0099e8;
+              color: $text-blue;
               text-decoration: none;
               .fas{
                 font-weight: 900;
