--- a/app/assets/stylesheets/modules/_registration.scss
+++ b/app/assets/stylesheets/modules/_registration.scss
@@ -4,11 +4,12 @@
 @import "./mixin/_nav__bar_before_after";
 @import "./mixin/_registration__header";
 @import "./mixin/next__button";
+@import "./mixin/_color";
 
 .registration__wrapper{
   height: 2104px;
   box-sizing: border-box;
-  background-color: #f5f5f5;
+  background-color: $background-all;
   @include registration__header();
 
   .registration__main{
@@ -16,7 +17,7 @@
     &--container{
       width: 700px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: $white;
       .container__header{
         h2{
           padding: 32px 16px;
@@ -28,7 +29,7 @@
       }
       .container__main{
         padding: 40px 16px;
-        border-top: 1px solid #f5f5f5;
+        border-top: 1px solid $border-gray;
         .container__main--form{
           max-width: 320px;
           margin: 0 auto;
@@ -64,7 +65,7 @@
               text-align: right;
               padding: 0;
               a{
-                color: #0099e8;
+                color: $text-blue;
                 text-decoration: none;
                 i{
                   display: inline-block;
