--- a/app/assets/stylesheets/modules/_registration_finish.scss
+++ b/app/assets/stylesheets/modules/_registration_finish.scss
@@ -2,9 +2,10 @@
 @import "./mixin/registration__header";
 @import "./mixin/_registration__contain--main";
 @import "./mixin/next__button";
+@import "./mixin/color";
 
 .registration__finish{
-  background: #f5f5f5;
+  background: $background-all;
   height: 800px;
   @include registration__header();
   &--main{
@@ -13,7 +14,7 @@
     &--container{
       width: 700px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: $white;
       .container__header{
         h2{
           padding: 32px 16px;
@@ -25,7 +26,7 @@
       }
       .container__main{
         padding: 40px 16px;
-        border-top: 1px solid #f5f5f5;
+        border-top: 1px solid $border-gray;
         .container__main--form{
           max-width: 320px;
           margin: 0 auto;
