--- a/app/assets/stylesheets/modules/_sign_up.scss
+++ b/app/assets/stylesheets/modules/_sign_up.scss
@@ -1,22 +1,7 @@
 @import "./reset";
 @import "./mixin/_sign__up--footer";
 @import "./mixin/sns_icon";
-
-@mixin sns_icon(){
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translate(0, -50%);
-  display: inline-block;
-  speak: none;
-  font-style: normal;
-  font-weight: 400;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-}
-
-
+@import "./mixin/_color";
 
 *{
   box-sizing: border-box;
@@ -29,7 +14,7 @@ html{
     position: relative;
     .sign__up--wrapper{
       height: 756px;
-      background-color: #f5f5f5;
+      background-color: $background-all;
       header{
         width: 100vw;
         height: 128px;
@@ -50,7 +35,7 @@ html{
         text-align: center;
         text-decoration: none;
         &__box{
-          background-color: white;
+          background-color: $white;
           width: 700px;
           height: 100%;
           margin: 0 auto;
@@ -82,14 +67,14 @@ html{
                 i{
                   @include sns_icon();
 
-                  color: #ccc;
+                  color: $border-gray;
                   font-size: 20px;
                 }
               }
               &--facebook{
                 margin: 16px 0 0;
                 background-color: #385185;
-                color: #fff;
+                color: $white;
                 display: block;
                 width: 100%;
                 line-height: 48px;
@@ -98,7 +83,7 @@ html{
                 i{
                   @include sns_icon();
 
-                  color: #fff;
+                  color: $white;
                   background: #385185;
                   font-size: 30px;
                 }
@@ -106,7 +91,7 @@ html{
               &--google{
                 margin: 16px 0 0;
                 background: no-repeat;
-                background-color: #fff;
+                background-color: $white;
                 background-image: url('http://image.news.livedoor.com/newsimage/7/c/7cfd3_1223_ddf1a242_1acb6e23-m.jpg') ;
                 background-size: 6%;
                 background-position:20px;
