--- a/app/assets/stylesheets/modules/_registration.scss
+++ b/app/assets/stylesheets/modules/_registration.scss
@@ -29,7 +29,7 @@
       }
       .container__main{
         padding: 40px 16px;
-        border-top: 1px solid $border-gray;
+        border-top: 1px solid $background-all;
         .container__main--form{
           max-width: 320px;
           margin: 0 auto;
