--- a/app/views/sign/_sign_up--header.html.haml
+++ b/app/views/sign/_sign_up--header.html.haml
@@ -1,2 +1,2 @@
 %a{href: "#"}
-  %img.logo{alt: "", src: "https://www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?376951604"}
+  %img.logo{src: "/assets/mercari_logo_horizontal.png"}
