--- a/app/assets/stylesheets/mixin/_registration__contain--main.scss
+++ b/app/assets/stylesheets/mixin/_registration__contain--main.scss
@@ -36,6 +36,7 @@
   label{
     font-weight: 550;
     display: inline-block;
+    font-size: 14px;
   }
   .require{
     background: $background-red;
