--- a/app/views/registrations/index.html.haml
+++ b/app/views/registrations/index.html.haml
@@ -1,8 +1,8 @@
-.registration__wrapper
+.registration_wrapper
   %header
     = render "./sign/sign_up--header"
 
-    .registration__bar
+    .registration_bar
       %ol
         %li.l--first
           会員情報
@@ -20,8 +20,8 @@
           完了
           .nav__bar.nav__bar--last
     / /header
-  .registration__main
-    .registration__main--container
+  .registration_main
+    .registration_main__container
       .container__header
         %h2 会員情報入力
       .container__main
