--- a/app/assets/stylesheets/mixin/_sign__up--footer.scss
+++ b/app/assets/stylesheets/mixin/_sign__up--footer.scss
@@ -1,5 +1,5 @@
 @mixin sign__up--footer(){
-  .sign__up--footer{
+  .sign_up_footer{
     text-align: center;
     z-index: 1;
     position: absolute;
@@ -11,7 +11,7 @@
     padding: 40px 0;
     &__terms{
       width: 100vw;
-      li{
+      .l-term{
         display: inline-block;
         margin-left: 10px;
         font-size: 12px;
