--- a/app/assets/stylesheets/modules/_address_confirmation.scss
+++ b/app/assets/stylesheets/modules/_address_confirmation.scss
@@ -5,18 +5,18 @@
 @import "./mixin/next__button";
 @import "./mixin/_color";
 
-.adress__confirmation{
+.adress_confirmation{
   background: $background-all;
   height: 1700px;
-  @include registration__header();
-  &--main{
+  @include registration_header();
+  .address_main{
     display: block;
     margin-bottom: 40px;
-    &--container{
+    &__container{
       width: 700px;
       margin: 0 auto;
       background-color: $white;
-      .container__header{
+      &--header{
         h2{
           padding: 32px 16px;
           font-size: 22px;
@@ -25,24 +25,18 @@
           font-weight: 600;
         }
       }
-      .container__main{
+      &--main{
         padding: 40px 16px;
         border-top: 1px solid $background-all;
-        .container__main--form{
+        .adress_form{
           max-width: 320px;
           margin: 0 auto;
           .form__child--first{
             margin: 0;
-            label{
-              font-size: 14px;
-            }
             @include registration__contain--main();
           }
           .form__child{
             margin: 40px 0 0;
-            label{
-              font-size: 14px;
-            }
             h3{
               font-weight: 600;
             }
