--- a/app/assets/stylesheets/modules/_registration_finish.scss
+++ b/app/assets/stylesheets/modules/_registration_finish.scss
@@ -4,18 +4,18 @@
 @import "./mixin/next__button";
 @import "./mixin/color";
 
-.registration__finish{
+.registration_finish{
   background: $background-all;
   height: 800px;
-  @include registration__header();
-  &--main{
+  @include registration_header();
+  .finish_main{
     display: block;
     margin-bottom: 40px;
-    &--container{
+    &__container{
       width: 700px;
       margin: 0 auto;
       background-color: $white;
-      .container__header{
+      &--header{
         h2{
           padding: 32px 16px;
           font-size: 22px;
@@ -24,16 +24,16 @@
           font-weight: 600;
         }
       }
-      .container__main{
+      &--main{
         padding: 40px 16px;
         border-top: 1px solid $background-all;
-        .container__main--form{
+        .finish_form{
           max-width: 320px;
           margin: 0 auto;
           .form__child{
             margin: 40px 0 0;
             @include registration__contain--main();
-            .main__text{
+            .main_text{
               text-align: center;
               font-size: 18px;
             }
