--- a/app/views/sign/_sign_up_footer.html.haml
+++ b/app/views/sign/_sign_up_footer.html.haml
@@ -1,12 +1,12 @@
-%footer.sign__up--footer
-  %ul.sign__up--footer__terms
-    %li.terms__pribacy
+%footer.sign_up_footer
+  %ul.sign_up_footer__terms
+    %li.l-term
       %a{href: "#"} プライバシーポリシー
-    %li.terms__rule
+    %li.l-term
       %a{href: "#"} メルカリ利用規約
-    %li.terms__specified
+    %li.l-term
       %a{href: "#"} 特定商取引に関する表記
-  .sign__up--footer__logo
+  .sign_up_footer__logo
     %a{href: "#"}
       %img{alt: "", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?376951604"}
   %p
