フッターロゴ
フッターのロゴをcssで指定すれば変更できることに気づいたので、やってみました

--- a/app/views/sign/_sign_up_footer.html.haml
+++ b/app/views/sign/_sign_up_footer.html.haml
@@ -8,7 +8,7 @@
       %a{href: "#"} 特定商取引に関する表記
   .sign_up_footer__logo
     %a{href: "#"}
-      %img{alt: "", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?376951604"}
+      %img{alt: "", src: "/assets/mercari_logo_vertical.png"}
   %p
     %small
       © 2019 Mercari
