--- a/app/assets/stylesheets/mixin/_sign__up--footer.scss
+++ b/app/assets/stylesheets/mixin/_sign__up--footer.scss
@@ -26,9 +26,20 @@
       width: 80px;
       margin: 40px auto 0;
       display: block;
+      a{
+        display: block;
+        color: #333;
+        img{
+          vertical-align: middle;
+          height: 85px;
+          width: 85px;
+          -webkit-filter: grayscale(100%);
+          opacity: 0.3;
+        }
+      }
     }
     p{
-      margin: 5px auto;
+      margin: 12px auto;
       width: 456px;
       small{
         font-size: 12px;
