--- a/app/views/phones/index.html.haml
+++ b/app/views/phones/index.html.haml
@@ -33,7 +33,7 @@
           %p
             ※電話番号は本人確認や不正防止のために利用します。他のユーザーに公開されることはありません。
           .phone__contents--text
-            %a{href: "#"}
+            = link_to do
               電話番号の確認が必要な理由
               %i.fas.fa-angle-right
 
