--- a/app/views/sign/_sign_up--header.html.haml
+++ b/app/views/sign/_sign_up--header.html.haml
@@ -1,2 +1,2 @@
-%a{href: "#"}
-  %img.logo{src: "/assets/mercari_logo_horizontal.png"}
+= link_to do
+  = image_tag  "/assets/mercari_logo_horizontal.png", class: "logo"
