--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,7 +8,7 @@
           新規会員登録
       .main__box--contents
         .contents__regist
-          %a.contents__regist--mail{href: "/registrations", method: "get" }
+          = link_to registrations_path , class: "contents__regist--mail" do
             %i.far.fa-envelope
             メールアドレスで登録
           %button.contents__regist--facebook
