--- a/app/views/card_add/index.html.haml
+++ b/app/views/card_add/index.html.haml
@@ -80,7 +80,7 @@
           ログアウト
           %i.fa.fa-angle-right
   .l--card_add
-    %form.card__form{action: "", method: ""}
+    %form.card__form{action: "/card_add/:card_add_id/crejit_confirmation", method: "get"}
       .card__form--header
         %h2 支払い方法
       .card__form--main
