--- a/app/assets/stylesheets/modules/_address_confirmation.scss
+++ b/app/assets/stylesheets/modules/_address_confirmation.scss
@@ -3,7 +3,7 @@
 @import "./mixin/_registration__contain--main";
 @import "registration";
 @import "./mixin/next__button";
-@import "./mixin/_color";
+@import "../../config/color";
 
 .adress_confirmation{
   background: $background-all;
