Color.scssディレクトリ修正
Stylesheet内にconfigファイルうぃ作成して移しました

--- a/app/assets/stylesheets/mixin/_registration__header.scss
+++ b/app/assets/stylesheets/mixin/_registration__header.scss
@@ -1,6 +1,6 @@
 @import "./mixin/_nav__bar_before_after";
 
-@import "../../config/color";
+@import "./config/color";
 
 @mixin registration_header(){
   header{
