--- a/app/assets/stylesheets/modules/_login.scss
+++ b/app/assets/stylesheets/modules/_login.scss
@@ -2,7 +2,7 @@
 @import "./mixin/_sign__up--footer";
 @import "./mixin/sns_icon";
 @import "./mixin/next__button";
-@import "../../config/color";
+@import "./config/color";
 
 .sign_in_wrapper{
   height: 1150px;
