--- a/app/assets/stylesheets/modules/_phone.scss
+++ b/app/assets/stylesheets/modules/_phone.scss
@@ -1,7 +1,7 @@
 @import "./mixin/_sign__up--footer";
 @import "./mixin/registration__header";
 @import "./mixin/next__button";
-@import "../../config/color";
+@import "./config/color";
 
 .phone_confirmation{
   height: 880px;
