--- a/app/assets/stylesheets/modules/_registration.scss
+++ b/app/assets/stylesheets/modules/_registration.scss
@@ -4,7 +4,7 @@
 @import "./mixin/_nav__bar_before_after";
 @import "./mixin/_registration__header";
 @import "./mixin/next__button";
-@import "../../config/color";
+@import "./config/color";
 
 .registration_wrapper{
   height: 2104px;
