--- a/app/assets/stylesheets/modules/_sign_up.scss
+++ b/app/assets/stylesheets/modules/_sign_up.scss
@@ -2,7 +2,7 @@
 @import "./mixin/_sign__up--footer";
 @import "./mixin/_registration__header";
 @import "./mixin/sns_icon";
-@import "../../config/color";
+@import "./config/color";
 
 *{
   box-sizing: border-box;
